2008-09-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/scheduler.py:
	  Get more useful logging to debug problems.

2008-09-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	reviewed by: Arek Korbik

	* flumotion/component/combiners/switch/switch.py:
	Use pad monitors for the sink pads in switch to check for active or
	inactive eaters.
	Rewrite new segment events coming in after an eater goes inactive to
	have a start time same as first buffer to avoid massive timestamp
	jumps in output of switch.

2008-09-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Initialize self._gsterror

2008-09-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Default to using gnomevfssrc, it's the oldest element and thus
	  more available, it's actually in base, and it throws a halfway
	  decent error on a 401, in contrast with the other two.
	  Add an option to treat resource read errors as OK; this is a
	  stopgap until this code gets changed to take a manager's bouncer
	  state for that streamer into account.

2008-09-16  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/i18n.py (installGettext):
	Check if bindtextdomain & textdomain are available before
	calling them.

	* flumotion/common/bundle.py: Make sure that renaming
	a temporary file in a bundle works on win32.

	* flumotion/common/netutils.py: Do nested import of fcntl,
	since it's not available on all platforms.

2008-09-15  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/config.py (parsePlug):
	* flumotion/manager/config.py (parseBool):
	Add some (old) deprecation warnings.

2008-09-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  gst.element_factory_make() raises gst.PluginNotFoundError, so
	  handle it.

2008-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>
