@@ -1,5 +1,10 @@
 2008-09-20  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/common/testsuite.py:
+	  Make all TestCase objects Loggable.
+
+2008-09-20  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* flumotion/component/base/scheduler.py:
 	  Get more useful logging to debug problems.
 
